--- a/web/sites/genevieve-lethu/themes/cleverdrop/src/scss/components/_moodboard.scss
+++ b/web/sites/genevieve-lethu/themes/cleverdrop/src/scss/components/_moodboard.scss
@@ -28,6 +28,12 @@ $moodboard-height-xl: 650px;
 
     @include mq($from: md) {
       min-height: rem($moodboard-height-md);
+
+      &:hover {
+        img {
+          transform: scale(1.05);
+        }
+      }
     }
 
     @include mq($from: lg) {
@@ -36,12 +42,6 @@ $moodboard-height-xl: 650px;
 
     @include mq($from: xl) {
       min-height: rem($moodboard-height-xl);
-    }
-
-    &:hover {
-      img {
-        transform: scale(1.05);
-      }
     }
   }
 
@@ -60,13 +60,8 @@ $moodboard-height-xl: 650px;
 
   img {
     z-index: 1;
-    display: block;
     transform: scale(1);
     transition: transform .35s ease-in;
-
-    &:hover {
-      width: 120% !important;
-    }
 
     @include mq($until: md) {
       position: relative;
@@ -232,9 +227,13 @@ $moodboard-height-xl: 650px;
     @include mq($from: md) {
       width: percentage(calc(215 / 1380));
       height: auto;
-      left: 76%;
+      left: 74%;
       top: 0;
       position: absolute;
+    }
+
+    @include mq($from: xl) {
+      left: 76%;
     }
 
     &::after {
@@ -279,7 +278,7 @@ $moodboard-height-xl: 650px;
 
     @include mq($from: md) {
       top: 50%;
-      left: 76%;
+      left: 74%;
 
       &::after {
         content: "";
@@ -301,6 +300,10 @@ $moodboard-height-xl: 650px;
           left: rem(-94px);
         }
       }
+    }
+
+    @include mq($from: xl) {
+      left: 76%;
     }
   }
 
